app/src/main/java/com/example/bookclub/errors/StudyAlreadyInOpenOrClose.java
package com.example.bookclub.errors;

public class StudyAlreadyInOpenOrClose extends RuntimeException {
	public StudyAlreadyInOpenOrClose() {
		super("account already has study in open or close");
	}
}
